--- a/themes/custom.css
+++ b/themes/custom.css
@@ -180,7 +180,8 @@ ul.dropdown-menu.dropdown-menu-right .dropdown-item:focus {
 }
 .header .notification-list li:hover,
 .slideout-menu .notification-list li:hover,
-.header .notif-dropdown-link a:hover {
+.header .notif-dropdown-link a:hover,
+[component="chat/recent/room"] .chat-room-btn:hover  {
   background-color: var(--colorDdL);
 }
 .dropdown-menu > li > a {
@@ -977,9 +978,27 @@ a.btn-login:focus {
 .expanded-chat .chat-content li.chat-message .chat-user a {
   color: var(--colorFg);
 }
+[component="chat/user/list"] [data-uid].online [component="chat/user/list/username"] {
+  color: var(--colorFg);
+}
+[component="chat/user/list"] [data-uid] [component="chat/user/list/username"] {
+  color: var(--colorFg2);
+}
 .chat-modal [component="chat/header"],
 .chats-full [component="chat/header"] {
   border-bottom-color: var(--colorBgH);
+}
+.modal-header .btn-ghost-sm,
+[component="chat/composer"] .btn-ghost-sm,
+[component="chat/header"] .btn-ghost-sm,
+[component="chat/user/list"] .btn-ghost-sm {
+  &.active,
+  &:active,
+  &:focus,
+  &:hover {
+    background-color: var(--colorBgM) !important;
+    color: var(--colorFg);
+  }
 }
 .chat-modal [component="chat/header"] .members a,
 .chats-full [component="chat/header"] .members a,
@@ -1016,7 +1035,9 @@ a.btn-login:focus {
   .chat-content
   li.chat-message
   .message-body-wrapper:hover
-  .message-body {
+  .message-body,
+  [component="chat/recent"] .active .chat-room-btn,
+  [component="chat/recent"] .chat-room-btn:hover {
   background: var(--colorBgD);
 }
 .chat-modal .chat-content li.system-message,
